feat: Inserçãerções de implementações relacionadas ao 'desafio' de manipulação de uma lista de inteiros